chore: add keywords to package json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "plugins",
     "environment",
     "env",
-    "dotenv"
+    "dotenv",
+    "runtime",
+    "buildtime"
   ],
   "license": "MIT",
   "repository": {
