--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "jest --coverage",
     "prerelease": "npm t && npm run lint",
     "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish"
+    "postrelease": "git push --follow-tags origin HEAD && npm publish"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
